# pop

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
home/jinja2/: base.html  home.html
pop/: jinja2.py  settings.py  urls.py
schedule_booking/: admin.py  apps.py  models.py  views.py
schedule_booking/jinja2/: booking_saved.html  scheduling_base.html  scheduling_booking.html  scheduling_page_booking.html  scheduling_page_view.html  scheduling_view.html
