[tool.poetry]
name = "pop"
version = "0.1.0"
description = ""
authors = ["matteli <matthieu.nue@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
Django = "2.2"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
